--- a/main.tex
+++ b/main.tex
@@ -221,10 +221,10 @@
       \resumeProjectHeading
         {\textbf{Smart Farm Management Website} $|$ \emph{\href{https://github.com/kng1259/IOT-project}{GitHub}} $|$ \emph{\href{https://drive.google.com/file/d/1R50MEnKQcrV0OXfp1K20jsz2jnyDsDmk/view?usp=sharing}{Architecture Diagram}}}{Jan 2025 - Now}
           \resumeItemListStart
-            \resumeItem{Deployed a smart farm system on \textbf{Microsoft Azure} that collects sensor data from IoT devices and allows users to monitor and control the farm remotely.}
             \resumeItem{Used \textbf{Terraform} to automate the deployment of Azure resources, including IoT Hub, Azure Function, and a three-tier web application, utilizing VNet integration and Key Vault for secure communication and secrets storage.}
             \resumeItem{Developed an \textbf{Azure Function} using Python that listens to messages from IoT Hub and stores them in a PostgreSQL database.}
             \resumeItem{Implemented a multi-stage \textbf{Dockerfile} to containerize the ExpressJS backend server and deployed it to Azure App Service, optimizing the resulting image's size.}
+            \resumeItem{Used \textbf{Jenkins} to automate building and publishing the application to Azure.}
             \resumeItem{Managed a local \textbf{Mosquitto} MQTT broker to facilitate communication between IoT devices and the cloud.}
           \resumeItemListEnd
       
@@ -232,8 +232,8 @@
         {\textbf{Renting and Reselling Books Mobile App} $|$ \emph{\href{https://github.com/btram11/Mobile-242}{GitHub}}}{Jan 2025 - Now}
           \resumeItemListStart
             \resumeItem{Used \textbf{Terraform} to automate the deployment of Azure managed PostgreSQL, Redis service and a Virtual Machine for the backend server, utilizing VNet integration and Key Vault for secure communication and secrets storage.}
-            \resumeItem{Implemented a \textbf{Jenkinsfile} to automate building and pushing the mobile app's apk to Google Drive on a local Linux Jenkins server as part of the CI/CD pipeline.}
-            \resumeItem{Developed a {RESTful API} using \textbf{ExpressJS} and PostgreSQL to efficiently manage user accounts and books, utilizing Redis for efficient caching.}
+            \resumeItem{Used \textbf{Jenkins} to automate building and pushing the mobile app's apk to Google Drive.}
+            \resumeItem{Developed a {RESTful API} using \textbf{ExpressJS} and PostgreSQL to efficiently manage user accounts and books.}
           \resumeItemListEnd
 
       \resumeProjectHeading
@@ -242,7 +242,7 @@
             \resumeItem{Developed a {RESTful API} using \textbf{ExpressJS} and PostgreSQL to efficiently manage user accounts, posts, and comments.}
             \resumeItem{Implemented a \textbf{Docker Compose} file to run the ExpressJS server and PostgreSQL database in separate containers, allowing seamless local development experience.}
             \resumeItem{Wrote unit tests using \textbf{Jest} to ensure the correctness of the API endpoints.}
-            \resumeItem{Utilized \textbf{GitHub Actions} to automate running the unit tests on every push to the main branch.}
+            \resumeItem{Used \textbf{GitHub Actions} to automate running the unit tests on every push to the main branch.}
           \resumeItemListEnd
       
     \resumeSubHeadingListEnd
