--- a/main.tex
+++ b/main.tex
@@ -222,7 +222,7 @@
         {\textbf{Smart Farm Management Website} $|$ \emph{\href{https://github.com/kng1259/IOT-project}{GitHub}} $|$ \emph{\href{https://drive.google.com/file/d/1R50MEnKQcrV0OXfp1K20jsz2jnyDsDmk/view?usp=sharing}{Architecture Diagram}}}{Jan 2025 - Now}
           \resumeItemListStart
             \resumeItem{Used \textbf{Terraform} to automate the deployment of Azure resources, including IoT Hub, Azure Function, and a three-tier web application, utilizing VNet integration and Key Vault for secure communication and secrets storage.}
-            \resumeItem{Developed an \textbf{Azure Function} using Python that listens to messages from IoT Hub and stores them in a PostgreSQL database.}
+            \resumeItem{Developed a Python Azure Function that processes data from IoT devices, and a JavaScript backend service that manages Cloud-to-Device messaging using \textbf{Azure IoT SDK}.}
             \resumeItem{Implemented a multi-stage \textbf{Dockerfile} to containerize the ExpressJS backend server and deployed it to Azure App Service, optimizing the resulting image's size.}
             \resumeItem{Used \textbf{Jenkins} to automate building and publishing the application to Azure.}
             \resumeItem{Managed a local \textbf{Mosquitto} MQTT broker to facilitate communication between IoT devices and the cloud.}
