--- a/main.tex
+++ b/main.tex
@@ -220,10 +220,10 @@
     \resumeSubHeadingListStart
       
       \resumeProjectHeading
-        {\textbf{Smart Farm Management Website} $|$ \emph{\href{https://github.com/kng1259/IOT-project}{GitHub}} $|$ \emph{\href{https://drive.google.com/file/d/1wfQdTQRRYYFzMYMofCk8vZTn4HJppBqs/view?usp=sharing}{Architecture Diagram}}}{Jan 2025 - Now}
+        {\textbf{Smart Farm Management Website} $|$ \emph{\href{https://github.com/kng1259/IOT-project}{GitHub}} $|$ \emph{\href{https://drive.google.com/file/d/1EoGsjEHycOAPmUl10ieyaEXncYd-JI56/view?usp=sharing}{Architecture Diagram}}}{Jan 2025 - Now}
         {Team leader, DevOps, Backend}{}
           \resumeItemListStart
-            \resumeItem{Used \textbf{Terraform} to automate the deployment of Azure resources, including IoT Hub, Azure Function, and a three-tier web application, utilizing VNet integration and Key Vault for secure communication and secrets storage.}
+            \resumeItem{Used \textbf{Terraform} to automate the deployment of Azure resources, including IoT Hub and a three-tier web application, utilizing VNet integration and Key Vault for secure communication and secrets storage.}
             \resumeItem{Utilized \textbf{Azure IoT SDK} to manage data processing and Cloud-to-Device messaging in a Javascript backend service.}
             \resumeItem{Implemented a multi-stage \textbf{Dockerfile} to containerize the ExpressJS backend server and deployed it to Azure App Service, optimizing the resulting image's size.}
             \resumeItem{Used \textbf{Jenkins} to automate building and publishing the application to Azure.}
