--- a/main.tex
+++ b/main.tex
@@ -248,13 +248,13 @@
             \resumeItem{Used \textbf{GitHub Actions} to automate running the unit tests on every push to the main branch.}
           \resumeItemListEnd
 
-      % \resumeProjectHeading
-      %   {\textbf{Local Kubernetes Cluster} $|$ \emph{\href{https://github.com/kng1259/talos-libvirt-k8s-cluster}{GitHub}}}{April 2025 - Now}
-      %   {Solo project}{}
-      %     \resumeItemListStart
-      %       \resumeItem{Managed a virtualized multi-node Kubernetes cluster using \textbf{Talos Linux} and \textbf{Vagrant} on a physical host machine}
-      %       \resumeItem{Set up \textbf{Longhorn} for distributed storage, \textbf{Prometheus} for metrics and \textbf{Grafana} for visualization}
-      %     \resumeItemListEnd
+      \resumeProjectHeading
+        {\textbf{Local Kubernetes Cluster} $|$ \emph{\href{https://github.com/kng1259/talos-libvirt-k8s-cluster}{GitHub}}}{April 2025 - Now}
+        {Solo project}{}
+          \resumeItemListStart
+            \resumeItem{Managed a virtualized multi-node Kubernetes cluster using \textbf{Talos Linux} and \textbf{Vagrant} on a physical host machine}
+            \resumeItem{Deployed a simple backend server connecting to PostgreSQL and Redis}
+          \resumeItemListEnd
     \resumeSubHeadingListEnd
 
 
